--- a/form.html
+++ b/form.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+    <head> 
+        <title> HTML FORM </title>
+    </head>
+    <body>
+        <h1> HTML FORM </h1>
+        <fieldset>
+            <legend>sign up</legend>
+            <br>
+        <form>
+            <label>Name :</label>
+            <input type="text" style="width: 200px;" required placeholder="Enter Your Name" >
+            <br><br>
+            <label>Age :</label>
+            <input type="number" value="18" disabled>
+            <br><br>
+            <label>Phone Number :</label>
+            <input type="number">
+            <br><br>
+            <label> Email :</label>
+            <input type="email">
+            <br><BR>
+            <label>Password :</label>
+            <input type="password"><br><br>
+            <input type="radio" name="gender">
+            <label>Male </label>
+            <input type="radio" name="gender">
+            <label >Female</label>
+            <input type="radio" name="gender">
+            <label >Other</label>
+            <br><br>
+            <input type="submit">
 
+
+        </form>
+        </fieldset>
+    </body>
+   
+</html>
