--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
         <fieldset>
             <legend>sign up</legend>
             <br>
-        <form>
+        <form action="">
             <label>Name :</label>
             <input type="text" style="width: 200px;" required placeholder="Enter Your Name" >
             <br><br>
