--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/x-icon" href="https://tse3.mm.bing.net/th/id/OIP.rJlGRhc-aLapZKLwPzSfQAHaFm?pid=Api&P=0&h=180">
     </head>
     <body>
-        <table style="border: 2px solid;width: 200px;">
+        <table border="1">
             <caption>DataTable</caption>
             <thead>
                 <tr style="height: 30px;">
