--- a/form.html
+++ b/form.html
@@ -15,6 +15,13 @@
             <label>Age :</label>
             <input type="number" value="18" disabled>
             <br><br>
+            <label> language :</label>
+        <input type="text" placeholder="select" list="lan">
+        <datalist id="lan">
+            <option value="java"> </option>
+            <option value="javascript"></option>
+            <option value="python"></option>
+        </datalist><br><br>
             <label>Phone Number :</label>
             <input type="number">
             <br><br>
